feat(smarthome): implement Toggles functionality
ref: https://developers.google.com/actions/smarthome/traits/toggles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -161,13 +161,23 @@
                   <span class="mdl-switch__label">Is Running</span>
                 </label>
               </div>
-              <!-- <div id='demo-washer-toggles-main'>
-            <label id="demo-washer-toggles" class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="demo-washer-toggles-in">
-              <input type="checkbox" id="demo-washer-toggles-in" class="mdl-switch__input">
-              <span class="mdl-switch__label">Is in Turbo</span>
-            </label>
-          </div>
-          <br> -->
+              <!-- Toggles functionality start -->
+              <div id="demo-washer-toggles-main">
+                <label
+                  id="demo-washer-toggles"
+                  class="mdl-switch mdl-js-switch mdl-js-ripple-effect"
+                  for="demo-washer-toggles-in"
+                >
+                  <input
+                    type="checkbox"
+                    id="demo-washer-toggles-in"
+                    class="mdl-switch__input"
+                  />
+                  <span class="mdl-switch__label">Is in Turbo</span>
+                </label>
+              </div>
+              <br />
+              <!-- Toggles functionality end -->
             </div>
             <div class="mdl-card__actions mdl-card--border">
               <a
